--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,9 +1,45 @@
+:root {
+    --primary : #ebebebc7; /* darker grey*/
+    --secondary : #f9f9f9; /* off white*/
+    --tri :  #ae4d4d; /* pop color*/
+}
+
+*{
+    font-family: 'Montserrat', sans-serif;
+}
 body {
-    background-color:moccasin;
+    background-color: var(--primary);
+    padding-top: 40px;
 }
 
 h1 {
-    color:saddlebrown;
+    color:var(--tri);
     margin-left: 20px;
     text-align: center;
+}
+.box {
+    background: var(--secondary);
+    box-shadow: 0px 0px 1px rgba(0,0,0,.2), 0px 2px 4px rgba(0,0,0,.1);
+    text-shadow: 1px 1px 1px rgba(0,0,0,.1);
+    margin-bottom: 20px;
+    border-radius: 5px;
+    max-width:fit-content;
+}
+
+.nav{
+    background-color: var(--secondary);
+    overflow: hidden;
+}
+.nav a {
+    float: left;
+    display: block;
+    color: var(--primary);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration:none;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, .5);
+
+}
+.nav a:hover{
+    color: var(--tri);
 }
