--- a/style_sheet.css
+++ b/style_sheet.css
@@ -17,13 +17,23 @@ h1 {
     margin-left: 20px;
     text-align: center;
 }
+p {
+    color:var(--primary);
+    font-size: large;
+    padding: 5px 5px 5px 5px;
+}
 .box {
     background: var(--secondary);
     box-shadow: 0px 0px 1px rgba(0,0,0,.2), 0px 2px 4px rgba(0,0,0,.1);
     text-shadow: 1px 1px 1px rgba(0,0,0,.1);
-    margin-bottom: 20px;
     border-radius: 5px;
     max-width:fit-content;
+    margin: 20px 20px 20px 20px
+}
+img {
+    max-width: 20%;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.2), 0px 2px 4px rgba(0,0,0,.1);
+    margin: 10px 10px 10px 10px;
 }
 
 .nav{
