--- a/style_sheet.css
+++ b/style_sheet.css
@@ -22,6 +22,23 @@ p {
     font-size: large;
     padding: 5px 5px 5px 5px;
 }
+.grid-container{
+    display: grid;
+    grid-template-columns: 200px 200px 200px 200px;
+}
+.grid-container > div {
+    background: var(--secondary);
+    box-shadow: 0px 0px 1px rgba(0,0,0,.2), 0px 2px 4px rgba(0, 0, 0, .1);
+    text-shadow: 1px 1px 1px (0,0,0,.1);
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+.grid-container > div:hover{
+    color: var(--tri);
+}
 .box {
     background: var(--secondary);
     box-shadow: 0px 0px 1px rgba(0,0,0,.2), 0px 2px 4px rgba(0,0,0,.1);
